@@ -19,6 +19,8 @@ import io.trino.Session;
 import io.trino.spi.expression.ConnectorExpression;
 import io.trino.spi.type.Type;
 import io.trino.sql.tree.ArithmeticBinaryExpression;
+import io.trino.sql.tree.AtTimeZone;
+import io.trino.sql.tree.CoalesceExpression;
 import io.trino.sql.tree.Expression;
 import io.trino.sql.tree.FunctionCall;
 import io.trino.sql.tree.LongLiteral;
@@ -39,6 +41,8 @@ import static io.trino.spi.type.DoubleType.DOUBLE;
 import static io.trino.spi.type.IntegerType.INTEGER;
 import static io.trino.spi.type.RowType.field;
 import static io.trino.spi.type.RowType.rowType;
+import static io.trino.spi.type.TimestampType.TIMESTAMP_MILLIS;
+import static io.trino.spi.type.TimestampWithTimeZoneType.TIMESTAMP_TZ_MILLIS;
 import static io.trino.spi.type.VarcharType.createVarcharType;
 import static io.trino.sql.planner.ConnectorExpressionTranslator.translate;
 import static io.trino.sql.planner.PartialTranslator.extractPartialTranslations;
@@ -58,7 +62,11 @@ public class TestPartialTranslator
             .put(new Symbol("double_symbol_1"), DOUBLE)
             .put(new Symbol("double_symbol_2"), DOUBLE)
             .put(new Symbol("bigint_symbol_1"), BIGINT)
-            .put(new Symbol("row_symbol_1"), rowType(field("int_symbol_1", INTEGER), field("varchar_symbol_1", createVarcharType(5))))
+            .put(new Symbol("timestamp3_symbol_1"), TIMESTAMP_MILLIS)
+            .put(new Symbol("row_symbol_1"), rowType(
+                    field("int_symbol_1", INTEGER),
+                    field("varchar_symbol_1", createVarcharType(5)),
+                    field("timestamptz3_field_1", TIMESTAMP_TZ_MILLIS)))
             .buildOrThrow());
 
     @Test
@@ -67,15 +75,21 @@ public class TestPartialTranslator
         Expression rowSymbolReference = new SymbolReference("row_symbol_1");
         Expression dereferenceExpression1 = new SubscriptExpression(rowSymbolReference, new LongLiteral("1"));
         Expression dereferenceExpression2 = new SubscriptExpression(rowSymbolReference, new LongLiteral("2"));
+        Expression dereferenceExpression3 = new SubscriptExpression(rowSymbolReference, new LongLiteral("3"));
         Expression stringLiteral = new StringLiteral("abcd");
         Expression symbolReference1 = new SymbolReference("double_symbol_1");
+        SymbolReference timestamp3SymbolReference = new SymbolReference("timestamp3_symbol_1");
 
         assertFullTranslation(symbolReference1);
         assertFullTranslation(dereferenceExpression1);
         assertFullTranslation(stringLiteral);
+        assertFullTranslation(new ArithmeticBinaryExpression(ADD, symbolReference1, dereferenceExpression1));
 
-        Expression binaryExpression = new ArithmeticBinaryExpression(ADD, symbolReference1, dereferenceExpression1);
-        assertPartialTranslation(binaryExpression, ImmutableList.of(symbolReference1, dereferenceExpression1));
+        assertPartialTranslation(
+                new CoalesceExpression(
+                        new AtTimeZone(timestamp3SymbolReference, stringLiteral),
+                        dereferenceExpression3),
+                List.of(timestamp3SymbolReference, stringLiteral, dereferenceExpression3));
 
         List<Expression> functionArguments = ImmutableList.of(stringLiteral, dereferenceExpression2);
         Expression functionCallExpression = new FunctionCall(QualifiedName.of("concat"), functionArguments);
